fix 2025 prices